--- a/_posts/2015-12-02-bem-css.md
+++ b/_posts/2015-12-02-bem-css.md
@@ -28,35 +28,15 @@ Como pode-se notar a idéia básica é termos três itens:
 
 Ahn?! Imaginemos uma lista de itens, com um item ativo, algo mais ou menos assim:
 
-```html
-<ul class="list">
-  <li class="list-item active"></li>
-  <li class="list-item"></li>
-  <li class="list-item"></li>
-</ul>
-```
+{% gist d0160a9ac2a44f687c16a936c4ce7794 %}
 
-```css
-.list {}
-.list-item {}
-.list-item.active {}
-```
+{% gist 0cff30a4a26cd400ff465c86f3326cf0 %}
 
 Aplicando o *BEM*, teríamos algo assim:
 
-```html
-<ul class="list">
-  <li class="list__item"></li>
-  <li class="list__item"></li>
-  <li class="list__item list__item--active"></li>
-</ul>
-```
+{% gist 891e8543949e0669cc81978e21942d13 %}
 
-```css
-.list {}
-  .list__item {}
-  .list__item--active {}
-```
+{% gist 64909d9f695c856d4483bb5b305afc4e %}
 
 Confesso que há algum tempo atrás quando conheci o **BEM** fui influenciado pelo *pré*conceito e achei muito estranho/feio usar esses `__` e `--`. Mas, agora, mais por dentro da idéia, posso admitir que me convenceu. Claro, que como qualquer outro pensamento/metodologia, existem seus pontos negativos e positivos e cabe a ti, dar a palavra final.
 
@@ -64,5 +44,3 @@ Algumas coisas que percebi com a utilização do **BEM** (mas são apenas minhas
 
 * Fácil percepção *das coisas*: batendo o olho rapidamente ou na marcação HTML ou no CSS, é possível entender o que cada coisa faz.
 * Mais fácil de reutilizar *componentes*.
-
-Gostou? Escrevi alguma groselha? Quer melhorar? Abra uma [issue](https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues) mencionando o post e vamos conversar.
