--- a/_posts/2016-01-04-let-es6.md
+++ b/_posts/2016-01-04-let-es6.md
@@ -18,82 +18,30 @@ The *keyword* `let` allows us creating block scopes in JavaScript. Let's see som
 
 Using `var`.
 
-```js
-var me = 'James Bond';
-
-if(true) {
-  var me = 'Chuck Norris';
-}
-
-console.log(me);
-// Chuck Norris
-```
+{% gist 601c1522707571c103a1a22325493867 %}
 
 Using `let`.
 
-```js
-let me = 'James Bond';
-
-if(true) {
-  let me = 'Chuck Norris';
-}
-
-console.log(me);
-// James Bond
-```
+{% gist b70e636ba5819f968151ad152067c8e4 %}
 
 ## Loops
 
 Using `var`.
 
-```js
-for(var i = 0; i < 5; i++) {
-  // ...
-}
-
-console.log(i);
-// 5
-```
+{% gist a6dd4054ee2eb308eee13f9f7a5a807c %}
 
 Using `let`.
 
-```js
-for(let i = 0; i < 5; i++) {
-  // ...
-}
-
-console.log(i);
-// ReferenceError: i is not defined
-```
+{% gist c5f2e77dc249402ac1a253f134e48605 %}
 
 ## Duplidated variables
 
 Using `var`.
 
-```js
-var country = 'Brazil';
-//..
-//..
-//..
-var country = 'Belgium';
-
-console.log(country);
-// Belgium
-```
+{% gist 55e955bb302221ffb4ed5caa12039f38 %}
 
 Using `let`.
 
-```js
-let country = 'Brazil';
-//..
-//..
-//..
-let country = 'Belgium';
-
-console.log(country);
-// Duplicate declaration 'country'
-```
+{% gist a461fe56e0434b711735b196fb3db0b3 %}
 
 [Here](https://jsbin.com/nifetib/edit?js,console) you can find an JS Bin with the examples.
-
-Do you like it? Did I write something stupid? Do you want to improve? Open an [issue](https://github.com/raphaelfabeni/raphaelfabeni.github.io/issues) mentioning the post and let's talk about it.
