--- a/_posts/2016-12-22-thanks-2016.markdown
+++ b/_posts/2016-12-22-thanks-2016.markdown
@@ -15,9 +15,7 @@ Two thousand and sixteen or 2016 as you prefer, it was a really crazy year. I ch
 
 ## Partnerships
 
-Quando eu e o  começamos a organizar o meetup, sinceramente não tínhamos a menor idéia do que poderia acontecer e nosso pensamento era o seguinte: _"Vamos tentar fazer uma edição, e se for muito ruim, valeu a tentativa"_. Nunca passou pela nossa cabeça um dia termos _parceiros_ correndo conosco.
-
-When I and [Felipe](http://twitter.com/lfeh) started organizing the meetup, sincerely we didn't have idea what could happen and our thinking was: _"Let's try to make the first edition and if it was very bad, it was worth the attempt."_. We never think that one day we would have some partners with us.
+When [Felipe](http://twitter.com/lfeh) and I started organizing the meetup, sincerely we didn't have idea what could happen and our thinking was: _"Let's try to make the first edition and if it was very bad, it was worth the attempt."_. We never think that one day we would have some partners with us.
 
 The first partner was **[GeekHunter](https://www.geekhunter.com.br/)** which is a company from south of Brazil and it came to Sao Paulo to help us. With an idea to invert the job interviews, for who don't know, we strongly recommend, even more for whom already had a problem with recruitment proccess.
 
