Adds the new URLs

--- a/_posts/2016-12-22-thanks-2016.md
+++ b/_posts/2016-12-22-thanks-2016.md
@@ -6,9 +6,9 @@ type: Post
 image: "https://cloud.githubusercontent.com/assets/1345662/21431594/02db8a2e-c84f-11e6-9c76-09589b9e2114.jpg"
 alt: "Image of a man costumed Santa Claus with a cookie in his mouth"
 lang: en
-url_en: /thanks-2016/
-url_br: /muito-thanks-2016/
 category: 'life'
+permalink: 'thanks-2016/'
+ref: '2016-year'
 ---
 
 Two thousand and sixteen or 2016 as you prefer, it was a really crazy year. I changed job and I almost didn't send talk proposals to conferences. Actually, I sent one, but I couldn't follow with it. On the other hand, I could dedicate more time to my dear [CSS Meetup](http://twitter.com/meetupcss).
