--- a/_posts/2017-12-31-thanks-2017.md
+++ b/_posts/2017-12-31-thanks-2017.md
@@ -6,8 +6,9 @@ type: Post
 image: https://user-images.githubusercontent.com/1345662/34464690-749ebaec-ee72-11e7-9a81-fd36f1bebecc.jpg
 alt: Raphael Fabeni speaking at Frontinsampa 2017 edition
 lang: en
-url_en: /thanks-2017/
 category: 'life'
+permalink: 'thanks-2017/'
+ref: 'thanks-2017'
 ---
 
 2017 was an **awesome** year! A lot of nice stuff happened, not only in my personal life but also in my career.
