--- a/pt-br/_posts/2014-12-12-2014-foi-demais.md
+++ b/pt-br/_posts/2014-12-12-2014-foi-demais.md
@@ -8,6 +8,8 @@ image: 'https://cloud.githubusercontent.com/assets/1345662/11458228/58c9b94e-96a
 alt: 'Carro antigo preto, visto de frente'
 lang: pt-br
 category: 'life'
+permalink: 'valeu-2014/'
+ref: 'valeu-2014'
 ---
 
 Todo mundo já disse ou ouviu alguém dizer: *"Nossa! O ano passou voando!"*. Nunca dei muito valor a essa frase, mas esse ano pude comprovar que é verdade. Se passou rápido, geralmente é porque você esteve ocupado com outras coisas e teoricamente não teve tempo de *aproveitar* o ano; felizmente acho eu, posso contrariar um pouco essa teoria: o ano realmente passou rápido porque estava ocupado com algumas coisas, mas **coisas boas**; posso dizer que foi um ano muito produtivo e que não deixei de aproveitá-lo.
