--- a/pt-br/_posts/2015-08-31-brazil-js-2015.md
+++ b/pt-br/_posts/2015-08-31-brazil-js-2015.md
@@ -8,6 +8,8 @@ image: "https://cloud.githubusercontent.com/assets/1345662/9588327/013ec7be-4ffe
 alt: "Imagem de um teatro visto do palco"
 lang: pt-br
 category: 'conferences'
+permalink: 'brazil-js-2015/'
+ref: 'brazil-js-2015'
 ---
 
 Há alguns dias atrás rolou a edição 2015 da BrazilJS. Pra quem não conhece, e acredito que são poucos, a conferência rola em Porto Alegre durante dois dias e reúne uma galera do mundo inteiro.
