--- a/pt-br/_posts/2015-09-29-front-in-vale-2015.md
+++ b/pt-br/_posts/2015-09-29-front-in-vale-2015.md
@@ -7,9 +7,9 @@ date: 2015-09-29
 image: "https://cloud.githubusercontent.com/assets/1345662/10179370/ed971582-66db-11e5-9c8f-31a009342cb1.jpg"
 alt: "Imagem de um por do sol"
 lang: pt-br
-url_en: /front-in-vale/
-url_br: /front-in-vale-2015/
 category: 'conferences'
+permalink: 'front-in-vale-2015/'
+ref: 'front-in-vale-2015'
 ---
 
 No último final de semana rolou em São José do Campos o [Front in Vale](http://www.frontinvale.com.br) que é o primeiro evento focado em front-end do Vale do Paraíba e eu estive por lá falando *umas groselhas* sobre Cultura de Desenvolvimento.
