--- a/pt-br/_posts/2015-12-02-bem-css.md
+++ b/pt-br/_posts/2015-12-02-bem-css.md
@@ -7,9 +7,9 @@ date: 2015-12-02
 image: "https://cloud.githubusercontent.com/assets/1345662/11520648/792ca134-988c-11e5-8d8a-3e5eb70b2bd7.jpg"
 alt: "Parede branca de uma casa com várias janelas com detalhes na cor cinza, e duas delas na cor laranja"
 lang: pt-br
-url_en: /bem-css-overview/
-url_br: /bem-css/
 category: 'css'
+permalink: 'bem-css/'
+ref: 'bem-css'
 ---
 
 CSS é fácil de aprender? A princípio muitos dirão que sim, principalmente pela sua facilidade e a possibilidade de se ver rapidamente o que se está fazendo. No entanto, *como nem tudo na vida são flores*, é claro que existem os pontos negativos e, quando falamos nisso, um dos principais pontos são a manutenção/organização do CSS.
