--- a/pt-br/_posts/2014-08-25-tdc-2014.md
+++ b/pt-br/_posts/2014-08-25-tdc-2014.md
@@ -8,6 +8,8 @@ image: 'https://cloud.githubusercontent.com/assets/1345662/11458493/5bad202e-96a
 alt: 'The Developers Conference 2014'
 lang: pt-br
 category: 'conferences'
+permalink: 'tdc-2014/'
+ref: 'tdc-2014'
 ---
 
 No começo desse mês rolou o The Developers Conference 2014 aqui em São Paulo. Como sempre, o evento foi muito bacana; estrutura e organização muito bons. Mas esse ano, pelo menos pra mim, ele teve um gostinho especial: palestrei pela primeira vez em um evento de porte tão grande quanto o TDC.
