--- a/pt-br/_posts/2014-10-02-meetup-css-02.md
+++ b/pt-br/_posts/2014-10-02-meetup-css-02.md
@@ -8,6 +8,8 @@ image: 'https://cloud.githubusercontent.com/assets/1345662/11458326/bc4cafc0-96a
 alt: 'Meetup CSS SP na sua segunda edição na empresa Lambda 3'
 lang: pt-br
 category: 'conferences'
+permalink: 'meetup-css-02/'
+ref: 'meetup-css-02'
 ---
 
 Essa semana, na terça-feira dia 30, rolou o segundo encontro do <a href="http://www.meetup.com/CSS-SP/">Meetup CSS</a>. Nessa edição tivemos o apoio da <a href="http://www.lambda3.com.br/">Lambda 3</a> que nos cedeu o espaço e também do <a href="http://imasters.com.br/">iMasters</a> que nos ofereceu o <i>coffee</i>.
