--- a/pt-br/_posts/2016-12-22-muito-thanks-2016.md
+++ b/pt-br/_posts/2016-12-22-muito-thanks-2016.md
@@ -6,9 +6,9 @@ type: Post
 image: "https://cloud.githubusercontent.com/assets/1345662/21431594/02db8a2e-c84f-11e6-9c76-09589b9e2114.jpg"
 alt: "Imagem de um homem fantasiado de Papai Noel com um cookie na boca"
 lang: pt-br
-url_en: /thanks-2016/
-url_br: /muito-thanks-2016/
 category: 'life'
+permalink: 'valeu-2016/'
+ref: '2016-year'
 ---
 
 Dois mil e dezesseis ou 2016 como você preferir foi um ano muito doido. Troquei de trabalho e quase não enviei proposta de call 4 papers pra eventos. Na verdade acho que mandei apenas uma, mas acabei não seguindo em frente. Em contrapartida, pude dedicar um tempo maior pra tocar o meu querido [Meetup CSS](http://twitter.com/meetupcss).
