General change for categories

--- a/pt-br/_posts/2015-03-10-css-ux.md
+++ b/pt-br/_posts/2015-03-10-css-ux.md
@@ -7,7 +7,7 @@ date: 2015-03-10
 image: 'https://cloud.githubusercontent.com/assets/1345662/11458082/167083aa-96a0-11e5-8256-38d2b385d783.jpg'
 alt: 'Imagem mostra homem dentro de um carro antigo segurando o volante e observando um cachorro que está sentado no banco ao seu lado'
 lang: pt-br
-category: 'user-experience'
+category: cultura
 permalink: 'css-ux/'
 ref: 'css-ux'
 ---
