--- a/_posts/2016-01-04-let-es6.md
+++ b/_posts/2016-01-04-let-es6.md
@@ -7,7 +7,7 @@ date: 2016-01-04
 image: https://cloud.githubusercontent.com/assets/1345662/12058818/748fa0b0-af37-11e5-88ee-f6e2b1e33fc5.jpg
 alt: A street with cars parked in both sides
 lang: en
-category: javascript
+category: tech
 permalink: let-es6/
 ref: es6-let
 
