Update Blog “2021-05-02-primeiro”

--- a/pt-br/_posts/2021-05-02-primeiro.md
+++ b/pt-br/_posts/2021-05-02-primeiro.md
@@ -11,6 +11,10 @@ ref: primeiro
 date: 2021-05-02 15:20
 alt: primeiro
 ---
-strava teste
+strava 5231011106/embed/a935916f133b984a4fc60809ce5e1f3a8417a4ac
+
+strava 5141478800/embed/66072ed847b5875cb1535db9f766f48fcb29374a
+
+strava 5223449160/embed/564a9a1fa43aa0ff62e06aabcbd64aee3a5c3e71
 
 instagram COTKdnBBSGo
